--- a/style/index.css
+++ b/style/index.css
@@ -33,12 +33,68 @@ body{
     font-size:1.6rem;
     line-height:1.5;
     font-family: 'Times New Roman', Times, serif;
+    max-width:100%;
+    margin:2% 2%;
+}
+header{
+    display:flex;
+    justify-content:space-between;
 }
 h1{
     display:flex;
     justify-content:flex-start;
+    font-size:5rem;
+    text-transform: uppercase;
 }
 nav a{
     display:flex;
     justify-content:flex-end;
+    text-decoration: none;
+    align-items:flex-start;
+    color:#4f4f4f;
+    padding:5%; 
 }
+.top-section{
+    display:flex;
+    justify-content:center;
+    text-decoration:none;
+}
+.top-section a{
+    color:black;
+    text-decoration:none;
+    font-weight:bold;
+}
+.image-button{
+    background-image: url("https://images.unsplash.com/photo-1611004739509-f23bd5730705?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80/600/400");
+    background-repeat:no-repeat;
+    background-size:cover;
+    color:white;
+    width:60rem;
+    height:40rem;
+    text-decoration: none;
+}
+.row{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-evenly;
+    padding:2rem;
+}
+.port-element{
+    text-align:center;
+}
+.port-element p{
+    font-weight: bold;
+    text-transform:uppercase;
+}
+footer{
+    background-color:lightgray;
+    padding:2rem;
+    text-align:center;
+    color:black;
+    text-decoration:none;
+}
+footer a{
+    color:black;
+    text-decoration:none;
+}
+
