--- a/style/index.css
+++ b/style/index.css
@@ -42,18 +42,27 @@ header{
 }
 h1{
     display:flex;
-    justify-content:flex-start;
+    justify-content:center;
     font-size:5rem;
     text-transform: uppercase;
 }
-nav a{
+nav{
+    width: 40%;
     display:flex;
-    justify-content:flex-end;
-    text-decoration: none;
-    align-items:flex-start;
-    color:#4f4f4f;
-    padding:5%; 
+    justify-content:space-between;
 }
+nav a{
+    display:inline-block;
+    text-decoration: none;
+    color:#4f4f4f;
+    padding:2%; 
+    width:23%;
+    border:2px solid #4f4f4f;
+    border-radius:10px;
+    text-align:center;
+    letter-spacing:2px;
+}
+
 .top-section{
     display:flex;
     justify-content:center;
@@ -98,3 +107,10 @@ footer a{
     text-decoration:none;
 }
 
+@media (max-width: 800px){
+
+}
+
+@media (max-width: 500px){
+    
+}
