--- a/style/index.css
+++ b/style/index.css
@@ -47,7 +47,7 @@ h1{
     text-transform: uppercase;
 }
 nav{
-    width: 40%;
+    width: 50%;
     display:flex;
     justify-content:space-between;
 }
@@ -56,11 +56,12 @@ nav a{
     text-decoration: none;
     color:#4f4f4f;
     padding:2%; 
-    width:23%;
+    width:25%;
     border:2px solid #4f4f4f;
     border-radius:10px;
     text-align:center;
-    letter-spacing:2px;
+    letter-spacing:1.5px;
+    font-size:2rem;
 }
 
 .top-section{
@@ -108,9 +109,44 @@ footer a{
 }
 
 @media (max-width: 800px){
+    *{
+        max-width:100%;
+    }
+    h1{
+        font-size:3rem;
+    }
+    nav a{
+        display: flex;
+        justify-content:space-around;
+        width:100%;
+    }
+
 
 }
 
 @media (max-width: 500px){
-    
+    *{
+        max-width:100%;
+    }
+    .top-header{
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+    }
+    h1{
+        font-size:4rem;
+    }
+    nav{
+        display:flex;
+        flex-direction:column;
+        align-content:center;
+    }
+    nav a{
+        margin:2% auto;
+    }
+    .image-button{
+        width:40rem;
+        height:30rem;
+    }
+   
 }
