got the responsive design for tablet screen size

--- a/style/index.css
+++ b/style/index.css
@@ -83,9 +83,10 @@ nav a{
     height:40rem;
     text-decoration: none;
 }
-.row{
+.project-section{
     display:flex;
     flex-direction:row;
+    flex-wrap:wrap;
     justify-content: space-evenly;
     padding:2rem;
 }
